# eyrc-24-25-logistic-cobot

./: README.md  requirements.sh
ebot_description/: CMakeLists.txt  package.xml
ebot_description/config/: controller.yaml
ebot_description/ebot_description/: payload.py
ebot_description/ebot_description/armed_spwaner/: spawner.py
ebot_description/ebot_description/armed_spwaner/pyarmor_runtime_000000/: __init__.py
ebot_description/ebot_description/pyarmor_runtime_000000/: __init__.py
ebot_description/launch/: ebot_gazebo_launch.py  ebot_gazebo_task2b_launch.py  ebot_gazebo_task3b_launch.py  ebot_gazebo_task4c_launch.py  spawn_robot.py  start_world_launch.py  start_world_task1b_launch.py  start_world_task1c_launch.py  start_world_task2a_launch.py  start_world_task2b_launch.py  start_world_task3b_launch.py  start_world_task4c_launch.py
ebot_description/meshes/: FUS1.STL  FUS2.STL  FUS3.STL  FUS4.STL  FWL.STL  FWR.STL  LHUS10.STL  LHUS9.STL  RHUS7.STL  RHUS9.STL  RUS5.STL  RUS6.STL  RWL.STL  RWR.STL
ebot_description/models/ebot/: ebot.gazebo  ebot_description.xacro  ebot_description_2a.xacro
ebot_docking/: CMakeLists.txt  package.xml
ebot_docking/scripts/: ebot_docking_boilerplate.py
ebot_docking/srv/: DockSw.srv
ebot_nav2/: CMakeLists.txt  package.xml
ebot_nav2/config/: ekf.yaml  mapper_params_online_async.yaml
ebot_nav2/launch/: ebot_bringup_launch.py
ebot_nav2/maps/: map_file_here.text
ebot_nav2/params/: nav2_params.yaml
ebot_nav2/rviz/: nav2_default_view.rviz
ebot_nav2/scripts/: scripts_file_here.text
eyantra_warehouse/: CMakeLists.txt  package.xml
eyantra_warehouse/config/: SkyX_Moon.fragment  package_link.json
eyantra_warehouse/launch/: task0.launch.py  task1b.launch.py  task1c.launch.py  task2a.launch.py
eyantra_warehouse/meshes/: package_box.stl
eyantra_warehouse/models/LB_city/: model.config  model.sdf
eyantra_warehouse/models/arm_base/: model.config  model.sdf
eyantra_warehouse/models/arm_base/meshes/: arm_base.dae
eyantra_warehouse/models/box/: model.sdf
eyantra_warehouse/models/box/meshes/: box.dae
eyantra_warehouse/models/boxes/box_1/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_10/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_11/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_12/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_13/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_14/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_15/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_16/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_17/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_18/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_19/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_2/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_20/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_21/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_22/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_23/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_24/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_25/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_26/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_27/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_28/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_29/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_3/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_30/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_31/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_32/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_33/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_34/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_35/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_36/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_37/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_38/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_39/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_4/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_40/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_41/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_42/: model.config  model.sdf
eyantra_warehouse/models/boxes/box_43/: model.sdf  (+1 more)
eyantra_warehouse/models/conveyor_belt/: model.sdf
eyantra_warehouse/models/drop_conveyor_belt/: model.config  model.sdf
eyantra_warehouse/models/drop_table/: model.config  model.sdf
eyantra_warehouse/models/ground_plane/: model.sdf
eyantra_warehouse/models/package_box/: model.config  model.sdf
eyantra_warehouse/models/rack/: model.config  model.sdf
eyantra_warehouse/models/warehouse_boundary/: model.config  model.sdf
eyantra_warehouse/models/window/: model.sdf
eyantra_warehouse/worlds/: eyantra_warehouse_task0.world  eyantra_warehouse_task1b.world  eyantra_warehouse_task1c.world  eyantra_warehouse_task2a.world  eyantra_warehouse_task2b.world  eyantra_warehouse_task3b.world  eyantra_warehouse_task4c.world
ur_description/: CMakeLists.txt
ur_description/config/: initial_positions.yaml
ur_description/launch/: start_ur_world_launch.py  ur5_gazebo_launch.py
ur_description/scripts/armed/: spawner_box_com.py
ur_description/scripts/armed_1/: spawner_box_1b.py
ur_description/scripts/armed_2/: spawner_box_1c.py
ur_description/scripts/armed_3/: spawner_box_2a.py
ur_description/urdf/: realsense2.urdf.xacro  ur.gazebo.xacro  ur.urdf.xacro  ur5.urdf.xacro  ur5_arm.urdf.xacro  ur_macro.xacro
ur_simulation_gazebo/: CMakeLists.txt  package.xml
ur_simulation_gazebo/config/: config_file_here.txt
ur_simulation_gazebo/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
ur_simulation_gazebo/test/: test_common.py  test_gazebo.py
(+71 files in other folders)
